--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -4669,5 +4669,291 @@ int main() {
   <p>Ответ: ABDECBDE</p>
   </details>
 
+  <details>
+    <summary>Задача 4. Эх, рекурсия</summary>
+    <p>Сколько раз будет вызвана функция f во время выполнения программы?</p>
+<pre>
+#include &lt;iostream&gt;
+using namespace std;
+
+void f(int n) {
+  if (n > 0) {
+    f(n - 1);
+    f(n - 2);
+  }
+}
+
+int main() {
+  f(3);
+  return 0;
+}
+</pre>
+  <code>9</code>
+  </details>
+
+  <details>
+    <summary>Задача 5. Горки</summary>
+    <p>Данная задача взята из архива Летних школ в Майкопе</p>
+
+    <p>Дан массив, состоящий из целых чисел. Назовём <strong>горкой</strong> элемент массива, у которого два соседа и оба меньше данного. Напишите программу, которая в данном массиве определит количество горок.</p>
+
+    <h4>Входные данные</h4>
+    <p>Сначала задано число N - количество элементов в массиве (1 ≤ N ≤ 100). Далее через пробел записаны N чисел - элементы массива. Массив состоит из целых чисел.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Необходимо вывести количество <strong>горок</strong> - элементов массива, у которых два соседа и которые при этом строго больше обоих своих соседей.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int N;
+  cin >> N;
+  int a[100];
+  for (int i = 0; i &lt; N; i++) {
+      cin >> a[i];
+  }
+  int sum = 0;
+  for (int i = 1; i &lt; N - 1; i++) {
+    if (a[i] > a[i - 1] && a[i] > a[i + 1]) {
+      sum++;
+    }
+  }
+  cout &lt;&lt; sum;
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 6. Тренировка перед чемпионатом мира!</summary>
+
+    <p>Это возмутительно! В прошлый раз вас выгнали из квалификации, хотя вы решили поставленную задачу для всех возможных ситуаций! Вы не отчаялись и решили начать тренировку.</p>
+
+    <p>Тренироваться нужно сразу начиная со сложных фигур, ваш выбор пал на ферзя. Итак, на доске стоит ферзь, требуется отметить все клетки, в которые он может походить. После нескольких часов решения этой задачи вы не смогли побороть соблазн и опять сели писать программу, которая ее решает.</p>
+
+    <h4>Входные данные</h4>
+
+    <p>Во входных данных записана шахматная доска. Она представляет из себя таблицу 8x8, в каждой клетке которой записан символ точки (номер 46 в ASCII таблице), кроме одной - в ней записан символ F (номер 70 в ASCII таблице). В этой выделенной точке стоит ферзь.</p>
+
+    <h4>Выходные данные</h4>
+
+    <p>Выведите таблицу в аналогичном формате, заменив все символы точек на символ ! (номер
+    33 в ASCII таблице) для всех ячеек, в которые может походить ферзь.</p>
+
+    <h4>Примечание</h4>
+
+    <p>Ферзь всегда ходит на любое количество клеток в любую из восьми сторон. Смотрите первый тест для более точного понимания ходов ферзя.</p>
+
+    <h4>Sample Input 1:</h4>
+<pre>
+........
+........
+........
+........
+....F...
+........
+........
+........
+</pre>
+    <h4>Sample Output 1:</h4>
+<pre>
+!...!...
+.!..!..!
+..!.!.!.
+...!!!..
+!!!!F!!!
+...!!!..
+..!.!.!.
+.!..!..!
+</pre>
+    <h4>Sample Input 2:</h4>
+<pre>
+........
+........
+........
+........
+........
+........
+........
+F.......
+</pre>
+    <h4>Sample Output 2:</h4>
+<pre>
+!......!
+!.....!.
+!....!..
+!...!...
+!..!....
+!.!.....
+!!......
+F!!!!!!!
+</pre>
+<pre>
+#include <iostream>
+
+using namespace std;
+
+int main() {
+    char a[8][8];
+    int fx, fy;
+    // ввод доски и ферзя
+    for (int i = 0; i &lt; 8; i++) {
+        for (int j = 0; j &lt; 8; j++) {
+            cin >> a[i][j];
+            if (a[i][j] == 'F') {
+                fy = i;
+                fx = j;
+            }
+        }
+    }
+    // решение
+    // 8 направлений
+    // вверх
+    int x = 1, y = 1;
+    while (fy - y >= 0) {
+        a[fy - y][fx] = '!';
+        y++;
+    }
+    // вверх-вправо
+    x = 1, y = 1;
+    while ((fy - y >= 0) && (fx + x &lt; 8)) {
+        a[fy - y][fx + x] = '!';
+        y++;
+        x++;
+    }
+    // вправо
+    x = 1, y = 1;
+    while (fx + x &lt; 8) {
+        a[fy][fx + x] = '!';
+        x++;
+    }
+    // вниз-вправо
+    x = 1, y = 1;
+    while ((fy + y &lt; 8) && (fx + x &lt; 8)) {
+        a[fy + y][fx + x] = '!';
+        y++;
+        x++;
+    }
+    // вниз
+    x = 1, y = 1;
+    while (fy + y &lt; 8) {
+        a[fy + y][fx] = '!';
+        y++;
+    }
+    // вниз-влево
+    x = 1, y = 1;
+    while ((fy + y &lt; 8) && (fx - x >= 0)) {
+        a[fy + y][fx - x] = '!';
+        y++;
+        x++;
+    }
+    // влево
+    x = 1, y = 1;
+    while (fx - x >= 0) {
+        a[fy][fx - x] = '!';
+        x++;
+    }
+    // вверх-влево
+    x = 1, y = 1;
+    while ((fy - y >= 0) && (fx - x >= 0)) {
+        a[fy - y][fx - x] = '!';
+        y++;
+        x++;
+    }
+    // вывод результата
+    for (int i = 0; i &lt; 8; i++) {
+        for (int j = 0; j &lt; 8; j++) {
+            cout &lt;&lt; a[i][j];
+        }
+        cout &lt;&lt; '\n';
+    }
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 7. Звездочки</summary>
+
+    <p>Вы обнаружили слово. Так оказалось, что в этом слове соседние буквы не дружат между собой. Вам требуется разделить их звездочками.</p>
+
+    <h4>Входные данные</h4>
+
+    <p>Вам необходимо написать рекурсивную функцию f, которая принимает два аргумента. Эти аргументы вы можете использовать как угодно для своего удобства, они не несут особого смысла. В главной программе будет вызвана команда f(-1, -1). Также ваша функция может возвращать произвольные значения, в том числе никакие. В главной программе возврат вашей функции никак не будет проверяться.</p>
+
+    <p>Функция должна целиком считать слово и на экран вывести то же самое слово, но в котором все соседние буквы разделены звездочками. Для вашего удобства после слова следует символ . (номер 46 в ASCII таблице), его не надо считать за часть слова, выводить и разделять звездочкой со словом. Гарантируется, что слово состоит только из заглавных и строчных символов латинского алфавита. Смотрите тестовый пример для более полного понимания условия.</p>
+
+    <h4>Выходные данные</h4>
+
+    <p>Функция должны вывести на экран разделенное слово.</p>
+<pre>
+void f(int a, int b) {
+    char sym;
+    cin >> sym;
+    if (sym == '.') {
+        return;
+    }
+    if (a == -1) {
+      cout &lt;&lt; sym;
+    } else {
+      cout &lt;&lt; '*' &lt;&lt; sym;
+    }
+    f(0, 0);
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 8. Проблема свободного места</summary>
+    <p>Данная задача взята с муниципального этапа всероссийской олимпиады школьников в Майкопе.</p>
+
+    <p>Темная ночь. Шумят волны, начинает капать дождь. Челкаш после очередного заплыва приплыл к контрабандистам, чтобы сбыть награбленный товар. Однако не все пошло по плану: выяснилось, что у контрабандистов на корабле уже фактически нет места. Задачу о рюкзаке контрабандисты не знают, и потому они требуют, чтобы Челкаш отдавал им товар в порядке неубывания веса. Челкаш уже очень устал и ничего не соображает, и потому эта задача кажется ему непосильной.</p>
+
+    <p>К его счастью, в этот раз он приплыл не один, а вместе с Гаврилой. Но запуганный Гаврила сидит в углу лодки и еле может пошевелить руками, и потому отсортировать товар он также не может. Поэтому Челкаш решает поступить так: он выкладывает весь товар в ряд и q раз меняет какие-то два элемента ряда местами. После этого он бросается на Гаврилу и требует, что бы он сказал, является ряд отсортированным по неубыванию или нет. Как уже было сказано, Челкаш очень устал, и даже если в какой-то момент товар оказался отсортированным, Челкаш может продолжить задавать вопросы.</p>
+
+    <p>В темноте Гаврила видит очень плохо, и потому он не может помочь своему товарищу. Но в то же время он понимает, что если он ошибется, то на следующий день, когда Челкаш узнает об ошибке, Гавриле несдобровать. Гаврила просит Вас помочь ему справиться со столь непростой задачей.</p>
+
+    <h4>Входные данные</h4>
+
+    <p>В первой строке входных данных дано два целых числа n и q (2 ≤ n ≤ 10⁵, 1 ≤ q ≤ 10⁵) — количество товара и запросов соответственно. Во второй строке дано n натуральных чисел, не превосходящих 10⁹ — веса товаров. Далее следуют q строк, каждая из которых содержит два различных целых числа a и b (1 ≤ a, b ≤ n), означающих, что Челкаш поменял элементы ряда с позициями a и b местами.</p>
+
+    <h4>Выходные данные</h4>
+
+    <p>Выведите q строк, являющимися ответами на запросы Челкаша. Если после изменения позиций элементов ряд стал отсортированным по неубыванию, выведите "Sorted!". В противном случае выведите "Unsorted!". Кавычки выводить не нужно.</p>
+
+    <h4>Sample Input 1:</h4>
+<pre>
+5 4
+1 2 5 3 4
+3 4
+4 5
+1 5
+5 1
+</pre>
+
+    <h4>Sample Output 1:</h4>
+<pre>
+Unsorted!
+Sorted!
+Unsorted!
+Sorted!
+</pre>
+
+    <h4>Sample Input 2:</h4>
+<pre>
+2 3
+2 10
+1 2
+1 2
+1 2
+</pre>
+
+    <h4>Sample Output 2:</h4>
+<pre>
+Unsorted!
+Sorted!
+Unsorted!
+</pre>
+  </details>
 </article>
 
