--- a/src/components/code/code-c/pages/elem-book4.html
+++ b/src/components/code/code-c/pages/elem-book4.html
@@ -41,7 +41,7 @@
   </p>
 
   <p>
-    <a href="#p15">Список рекомендуемой литературы (132)</a>
+    <a href="#p9">Список рекомендуемой литературы (132)</a>
   </p>
 </article>
 
@@ -50,5 +50,69 @@
 <article class="article">
   <div class="anchor" id="p1"></div>
   <h3>Предисловие (5)</h3>
+
+</article>
+
+
+<!-- Введение -->
+<article class="article">
+  <div class="anchor" id="p2"></div>
+  <h3>Введение (6)</h3>
+
+</article>
+
+
+<!-- Глава 1. Общие понятия языка Си -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>Глава 1. Общие понятия языка Си (7)</h3>
+
+</article>
+
+
+<!-- Глава 2. Основы языка Си -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Глава 2. Основы языка Си (27)</h3>
+
+</article>
+
+
+<!-- Глава 3. Математика в Си -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>Глава 3. Математика в Си (41)</h3>
+
+</article>
+
+
+<!-- Глава 4. Служба помощи и отладка программ -->
+<article class="article">
+  <div class="anchor" id="p6"></div>
+  <h3>Глава 4. Служба помощи и отладка программ (61)</h3>
+
+</article>
+
+
+<!-- Глава 5. Графика -->
+<article class="article">
+  <div class="anchor" id="p7"></div>
+  <h3>Глава 5. Графика (75)</h3>
+
+</article>
+
+
+<!-- Глава 6. Логические операторы -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>Глава 6. Логические операторы (98)</h3>
+
+</article>
+
+
+<!-- Список рекомендуемой литературы -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>Список рекомендуемой литературы (132)</h3>
 
 </article>
