--- a/src/components/code/code-c/c-courses/pages/elem-cour-ya1.html
+++ b/src/components/code/code-c/c-courses/pages/elem-cour-ya1.html
@@ -425,6 +425,45 @@ int main() {
 </pre>
   <p>Компиляторы g++ и clang++ обычно дают предупреждения о чтении неинициализированных переменных при использовании опции -Wall или -Wuninitialized:</p>
   <p>Заметим, что std::string является сложным типом и переменные такого типа всегда по умолчанию инициализируются пустой строкой. Поэтому нет необходимости писать std::string s = "";. Пишите просто std::string s;.</p>
+
+  <h4>Простые типы данных</h4>
+  <p>С типом int мы уже знакомы. Рассмотрим другие фундаментальные типы данных в С++. Это так называемые интегральные типы и типы для вещественных чисел.</p>
+<pre>
+int main() {
+  char c = '1';    // символ
+  bool b = true;   // логическая переменная, принимает значения false и true
+  int i = 42;      // целое число (занимает, как правило, 4 байта)
+  short int si = 17;           // короткое целое (занимает 2 байта)
+  long li = 12321321312;       // длинное целое (как правило, 8 байт)
+  long long lli = 12321321312; // длинное целое (как правило, 8 байт)
+  float f = 2.71828;           // дробное число с плавающей запятой (4 байта)
+  double d = 3.141592;         // дробное число двойной точности (8 байт)
+  long double ld = 1e15;       // длинное дробное (как правило, 16 байт)
+}
+</pre>
+  <p>Обратите внимание, что символы, в отличие от строк (то есть массивов символов), записываются в апострофах, а не в кавычках. В примере выше мы записываем в переменную c символ единицы. Фактически в памяти хранится ASCII-код этого символа, который равен 49.</p>
+
+  <p>Напомним, что каждый тип данных занимает заранее известное количество байтов памяти. Стандарт языка С++ не накладывает жёстких ограничений на размеры типов, они могут отличаться для разных платформ и компиляторов.</p>
+
+  <p>О том, что делать с этой особенностью, мы расскажем ниже. А пока отметим, что узнать размер переменной или типа на этапе компиляции можно с помощью оператора sizeof.</p>
+
+  <p>Например, на 64-битной Linux-системе компилятор clang++ использует такие размеры для типов:</p>
+<pre>
+int main() {
+  std::cout &lt;&lt; "char: " &lt;&lt; sizeof(char) &lt;&lt; "\n";                 //  1
+  std::cout &lt;&lt; "bool: " &lt;&lt; sizeof(bool) &lt;&lt; "\n";                 //  1
+  std::cout &lt;&lt; "short int: " &lt;&lt; sizeof(short int) &lt;&lt; "\n";       //  2 (по стандарту >= 2)
+  std::cout &lt;&lt; "int: " &lt;&lt; sizeof(int) &lt;&lt; "\n";                   //  4 (по стандарту >= 2)
+  std::cout &lt;&lt; "long int: " &lt;&lt; sizeof(long int) &lt;&lt; "\n";         //  8 (по стандарту >= 4)
+  std::cout &lt;&lt; "long long int: " &lt;&lt; sizeof(long long) &lt;&lt; "\n";   //  8 (по стандарту >= 8)
+  std::cout &lt;&lt; "float: " &lt;&lt;sizeof(float) &lt;&lt; "\n";               //  4
+  std::cout &lt;&lt; "double: " &lt;&lt; sizeof(double) &lt;&lt; "\n";             //  8
+  std::cout &lt;&lt; "long double: " &lt;&lt; sizeof(long double) &lt;&lt; "\n";   // 16
+}
+</pre>
+
+  <h4>Размеры стандартных типов</h4>
+  <p></p>По умолчанию числовые типы – знаковые. Они имеют диапазон значений от -2<sup>n-1</sup> до 2<sup>n-1</sup> - 1, где n – количество битов, занимаемых типом. Приставка unsigned перед типом делает его беззнаковым. В этом случае диапазон допустимых значений будет от 0 до 2<sup>n</sup> - 1:
 </article>
 
 
