--- a/src/components/code/code-c/c-base/pages/elem-about.html
+++ b/src/components/code/code-c/c-base/pages/elem-about.html
@@ -1,89 +1,23 @@
-<h1>Язык Си</h1>
+<h1>Язык C/C++</h1>
 
 
 <!-- Содержание -->
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#links">links</a></p>
-  <ol>
-    <li><a href="#links1">online редактор кода</a></li>
-    <li><a href="#links2">online игры</a></li>
-    <li><a href="#links3">online курсы</a></li>
-  </ol>
-  <p><a href="#about">about</a></p>
+  <p><a href="#aboutc">История языка Си</a></p>
+  <p><a href="#aboutcpp">История языка C++</a></p>
   <p><a href="#standart">Стандарты</a></p>
 </article>
 
 
-<!-- links -->
+<!-- aboutc -->
 <article class="article">
-  <div class="anchor" id="links"></div>
-  <h3>links</h3>
-</article>
-
-
-<!-- links1 -->
-<article class="article">
-  <div class="anchor" id="links1"></div>
-  <h3>online редактор кода</h3>
-
-  <p><a href="https://replit.com/languages/c">https://replit.com/languages/c</a></p>
-  <p><a href="https://www.onlinegdb.com/online_c_compiler">https://www.onlinegdb.com/online_c_compiler</a></p>
-</article>
-
-
-<!-- links2 -->
-<article class="article">
-  <div class="anchor" id="links2"></div>
-  <h3>online игры</h3>
-
-  <p><a href="https://learningcontent.cisco.com/games/binary/index.html">https://learningcontent.cisco.com/games/binary/index.html</a> Двоичные числа</p>
-  <p><a href="https://games.penjee.com/binary-bonanza/">https://games.penjee.com/binary-bonanza/</a> Двоичные числа</p>
-  <p><a href="https://games.penjee.com/binary-numbers-game/">https://games.penjee.com/binary-numbers-game/</a> Двоичные числа</p>
-  <p><a href="https://penjee.com/">https://penjee.com/</a></p>
-</article>
-
-
-<!-- links3 -->
-<article class="article">
-  <div class="anchor" id="links3"></div>
-  <h3>online курсы</h3>
-
-  <p><a href="https://teach-in.ru/">https://teach-in.ru/</a> Открытые видеолекции учебных курсов МГУ</p>
-  <p><a href="https://code-basics.com/ru/languages/clang">https://code-basics.com/ru/languages/clang</a> Курс Си 8 уроков. Прошел 2024.11.14 чт</p>
-  <hr>
-  <p><a href="https://gb.ru/courses/197">https://gb.ru/courses/197</a> Основы языка C 14 уроков. Закладываем фундамент Ваших знаний. Прошел 2024.09.26 пн</p>
-  <hr>
-  <p><a href="https://ru.hexlet.io/courses/introduction-to-c">https://ru.hexlet.io/courses/introduction-to-c</a> Введение в Си</p>
-  <hr>
-  <p><a href="https://itproger.com/course/c-programming">https://itproger.com/course/c-programming</a> Язык Си для начинающих</p>
-  <p><a href="https://metanit.com/c/tutorial/">https://metanit.com/c/tutorial/</a> Руководство по языку программирования Си</p>
-  <hr>
-  <p><a href="https://cs.mipt.ru/c_intro">https://cs.mipt.ru/c_intro</a> Курс молодого бойца на 1 курсе язык Си. Тимофей Хирьянов</p>
-  <p><a href="https://stepik.org/course/57680/">https://stepik.org/course/57680/</a> C для начинающих (теория и задачи). Татьяна Дербышева, Татьяна Овсянникова</p>
-  <p><a href="https://stepik.org/course/55690/">https://stepik.org/course/55690/</a> С для начинающих. Татьяна Дербышева, Татьяна Овсянникова</p>
-  <p><a href="https://stepik.org/course/65259/">https://stepik.org/course/65259/</a> Моя первая большая программа. Татьяна Дербышева</p>
-  <p><a href="https://stepik.org/course/3078/">https://stepik.org/course/3078/</a> Основы программирования на C. Задачи. Кирилл Постнов</p>
-  <p><a href="https://stepik.org/course/182938/">https://stepik.org/course/182938/</a> Программирование на С. Сергей Чесноков</p>
-  <hr>
-  <p><a href="http://cppstudio.com/">http://cppstudio.com/</a></p>
-  <p><a href="https://kpolyakov.spb.ru/school/c.htm">https://kpolyakov.spb.ru/school/c.htm</a> Язык программирования Си практический курс. Константин Поляков</p>
-  <p><a href="https://learnc.info/">https://learnc.info/</a></p>
-  <hr>
-  <p><a href="https://youngcoder.ru/">https://youngcoder.ru/</a> Основы программирования на языке С. Кирилл Постнов</p>
-  <p><a href="https://younglinux.info/c/">https://younglinux.info/c/</a> Основы языка C. С. Шапошникова</p>
-</article>
-
-
-<!-- about -->
-<article class="article">
-  <div class="anchor" id="about"></div>
-  <h3>about</h3>
+  <div class="anchor" id="aboutc"></div>
+  <h3>История языка Си</h3>
 
   <p>Язык Си один из самых популярных и распространенных языков программирования. Высокая скорость программ написанных на языке Си является причиной того что на нем пишут операционные системы и драйверы.</p>
 
-  <h4>История создания языка Си</h4>
   <p><strong>К 1969 году</strong> языков программирования было много. Господствовал процедурный стиль программирования. Когда писались функции. Был язык для инженерных расчетов Fortran. Был язык для экономических расчетов Kobol. А языка для программистов не было. Программисты работали под UNIX, писали на ассемблере, а вокруг уже работали на языках высокого уровня. И они стали пытаться сделать язык для себя. Сначала язык A, потом язык B, потом Си и на этом остановились.</p>
   <p><strong>1966</strong> язык BCPL (Деннис Ритчи). Предшественник языка B.</p>
   <p><strong>1969</strong> язык B (Деннис Ритчи). Предшественник языка C.</p>
@@ -94,6 +28,23 @@
   <p><strong>1985</strong> книга Кернигана и Ритчи переведена на русский язык и вышла под названием "Язык программирования Си. Задачи по языку Си"</p>
   <p><strong>1988</strong> выходит второе издание книги Кернигана и Ритчи "Язык программирования Си" (первое описание будущего стандарта ANSI C)</p>
   <p><strong>1992</strong> второе издание книги Кернигана и Ритчи "Язык программирования Си" выходит на русском языке</p>
+</article>
+
+
+<!-- aboutcpp-->
+<article class="article">
+  <div class="anchor" id="aboutcpp"></div>
+  <h2>История языка C++</h2>
+
+  <p>C++ это высокоуровневый компилируемый язык программирования со статической типизацией. В 1969-1973 годах в компании Bell Labs программистом Деннисом Ритчи (Dennis Ritchie) был разработан язык Си. Второй соавтор языка Си это Кен Томпсон.</p>
+  <p>Предшественниками языка Си были</p>
+  <p>1966 язык BCPL (Деннис Ритчи)</p>
+  <p>1969 язык B (Деннис Ритчи)</p>
+  <p>1972 язык C (Деннис Ритчи)</p>
+  <p>1978 Деннис Ритчи вместе с Брайаном Керниганом написал хорошую книгу "Язык программирования Си"</p>
+  <p>В 1979-1980-х годах датский программист Бьерн Страуструп (Bjarne Stroustrup) работал в Bell Labs и разработал язык С++ как расширение к языку Си и назвал его "Си с классами". Он дополнил язык Си возможностями ООП. До этого концепция ООП была реализована в Simula67.</p>
+  <p>1983 язык C++</p>
+  <p>В 1983 году язык "Си с классами" был переименован в С++. В 1985 году он презентовал свою разработку в книге "Язык программирования С++" и была вывпущена первая коммерческая версия языка С++. Впоследствии в язык С++ добавились новые возможности и язык Си и С++ стали развиваться независимо друг от друга. В 1989 году была выпущена вторая версия языка С++ 2.0. В 2003 году вышла новая версия С++ 03. В 2011 году был издан новый стандарт С++ 11.</p>
 </article>
 
 
