--- a/src/components/code/code-c/c-books/pages/elem-book4.html
+++ b/src/components/code/code-c/c-books/pages/elem-book4.html
@@ -4,8 +4,78 @@
 </article>
 
 
+<!-- Содержание -->
+<article class="article">
+  <h2>Содержание</h2>
+
+  <p>
+    <a href="#p1">sizeof (15)</a>
+    <br><a href="#p2">Пустой оператор (25)</a>
+    <br><a href="#p3">Литература (40)</a>
+  </p>
+</article>
+
+
+<!-- sizeof -->
+<article class="article">
+  <div class="anchor" id="p1"></div>
+  <h3>sizeof (15)</h3>
+
+  <p>С помощью операции sizeof можно определить размер памяти, которая соответствует идентификатору или типу</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+struct {
+  char h;
+  int b;
+  double f;
+} str;
+
+int main() {
+  int a;
+  a = sizeof(str);
+  printf("%d\n", a);
+}
+</pre>
+  <code>16</code>
+</article>
+
+
+<!-- Пустой оператор -->
+<article class="article">
+  <div class="anchor" id="p2"></div>
+  <h3>Пустой оператор (25)</h3>
+
+  <p>Пустой оператор состоит только из точки с запятой. При выполнении этого оператора ничего не происходит. Он необходим в следующих случаях:</p>
+  <ol>
+    <li>В операторах do, for, while, if если по синтаксису требуется оператор, но его нет</li>
+    <li>После метки перед фигурной скобкой. После метки всегда должен быть оператор, а фигурная скобка оператором не является.</li>
+  </ol>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int i = 0;
+  for (;; i++) {
+    if (i == 1) {
+      goto a;
+    }
+    if (i == 3) {
+      goto b;
+    }
+    printf("%d ", i);
+    a:;
+  }
+  b:;
+}
+</pre>
+  <code>0 2</code>
+</article>
+
+
 <!-- Литература -->
 <article class="article">
+  <div class="anchor" id="p3"></div>
   <h3>Литература (40)</h3>
 
   <ol>
