--- a/src/components/code/code-c/c-books/pages/elem-book5.html
+++ b/src/components/code/code-c/c-books/pages/elem-book5.html
@@ -55,6 +55,7 @@
   <h4>Программа 2</h4>
 <pre>
 #include &lt;stdio.h&gt;
+
 main() {
   printf("Hello!");
 }
@@ -65,6 +66,7 @@ main() {
   <h4>Программа 3</h4>
 <pre>
 #include &lt;stdio.h&gt;
+
 main() {
   printf("#\n");
   printf("$\n");
@@ -77,6 +79,7 @@ main() {
   <h4>Программа 4</h4>
 <pre>
 #include &lt;stdio.h&gt;
+
 main() {
   printf("#\n$\n@\n");
 }
@@ -88,6 +91,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   printf("#\n$\n@\n");
   getch();
@@ -100,6 +104,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("#\n$\n@\n");
@@ -113,6 +118,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("#\a");
@@ -126,6 +132,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("Function \"printf\" should");
@@ -140,6 +147,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("Function \'printf\' should");
@@ -154,6 +162,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("Format disk C:\\ \?");
@@ -167,6 +176,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("            \rYES");
@@ -180,6 +190,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("a\tf");
@@ -193,6 +204,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("a\bf");
@@ -207,6 +219,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   clrscr();
   printf("***");
@@ -227,6 +240,7 @@ main() {clrscr();printf("***");getch();}
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   // display one
   clrscr();    // to clear display
@@ -246,6 +260,7 @@ main() {
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   // display one
   clrscr();    // to clear display
@@ -267,18 +282,255 @@ main() {
   <div class="anchor" id="p4"></div>
   <h3>Глава 2. Основы языка Си (27)</h3>
 
-  <p>Напишем программу, в которой локально объявляются две переменные целого типа, одна символьного типа и одна с правающей точкой</p>
+  <p>Напишем программу, в которой локально объявляются две переменные целого, одна символьного типа и одна с правающей точкой</p>
 
   <h4>Программа 18</h4>
 <pre>
 #include &lt;stdio.h&gt;
 #include &lt;conio.h&gt;
+
 main() {
   int i;
   int j;
   char c;
   float x;
   clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, в которой глобально объявляются две переменые целого, одна символьного типа и одна с плавающей точкой</p>
+
+  <h4>Программа 19</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+int i;
+int j;
+char c;
+float x;
+
+main() {
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, в которой глобально и локально объявляются переменные целого типа</p>
+
+  <h4>Программа 20</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+int i;
+
+main() {
+  int j;
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, определяющую переменные для инициалов имени, отчества, фамилии</p>
+
+  <h4>Программа 21</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  char first;   // имя
+  char middle; // отчество
+  char last; // фамилия
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Можно объявить три переменные одного типа в одну строку</p>
+
+  <h4>Программа 22</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  char first, middle, last;
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, определяющую переменные для возраста и веса человека</p>
+
+  <h4>Программа 23</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int age, weight;
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, определяющую переменные для возраста и веса человека. Вес указывается с точностью до граммов</p>
+
+  <h4>Программа 24</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int age;
+  float weight;
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, определяющую переменные для номера класса, буквы класса, числа учеников, среднего балла</p>
+
+  <h4>Программа 25</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int class_number;
+  char class_letter;
+  int class_size;
+  float class_avg;
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, хранящую информацию о человеке. Возраст 25 лет, зарплата 6125руб. 25коп. в месяц, двое детей.</p>
+
+  <h4>Программа 26</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int age;
+  float salary;
+  int child;
+
+  age = 25;
+  salary = 6125.25;
+  child = 2;
+
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Присвоить значения переменным можно при их объявлении</p>
+
+  <h4>Программа 27</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int age = 25;
+  float salary = 6125.25;
+  int child = 2;
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, хранящую информацию о двух работниках. Ваша зарплата 7645 руб. 46 коп. Вы устроили к себе в компанию своего друга на тот же оклад</p>
+
+  <h4>Программа 28</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  float my_salary;
+  float friend_salary;
+
+  my_salary = 7645.46;
+  friend_salary = my_salary;
+
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, присваивающую инициалы G, M, P переменным символьного типа</p>
+
+  <h4>Программа 29</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  char first, middle, last;
+  first = 'G';
+  middle = 'M';
+  last = 'P';
+
+  clrscr();
+  getch();
+}
+</pre>
+
+  <p>Напишем программу, выводящую на печать значение переменной целого типа</p>
+
+  <h4>Программа 30</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int x = 8;
+  clrscr();
+  printf("%d\n", x);
+  getch();
+}
+</pre>
+
+  <p>Напишем прошграмму, выводящую на печать значения переменных целого, вещественного и символьного типов</p>
+
+  <h4>Программа 31</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int x = -55;
+  float y = 55.55;
+  char z = 'c';
+  clrscr();
+  printf("%d\n", x);
+  printf("%f\n", y);
+  printf("%c\n", z);
+  getch();
+}
+</pre>
+
+  <p>Все три переменных можно вывести на печать одним вызовом функции printf() в одну строку, а затем в три строки</p>
+
+  <h4>Программа 32</h4>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
+
+main() {
+  int x = -55;
+  float y = 55.55;
+  char z = 'c';
+  clrscr();
+  printf("%d %f %c\n", x, y, c);
+  printf("%d\n%f\n%c\n", x, y, c);
   getch();
 }
 </pre>
